# oi2cms

./: .gitignore  README.md  pyproject.toml
oi2cms/: contest.py  export.py  main.py  model.py  problem.py  team.py  utils.py
oi2cms/db/: team.py
testlib/: default.cpp
